# practica_ROS

./: README.md
ros2_prac2_ws/install/: local_setup.sh  setup.sh
ros2_prac2_ws/install/cpp_nodes/include/: derived_input_node.hpp  emocion_usuario_nodo.hpp  empaquetado_nodo.hpp  informacion_personal_nodo.hpp  input_node.hpp  posicion_usuario_nodo.hpp
ros2_prac2_ws/install/cpp_nodes/lib/cpp_nodes/: emocion_usuario_nodo  empaquetado_nodo  informacion_personal_nodo  main_node  posicion_usuario_nodo
ros2_prac2_ws/install/cpp_nodes/share/cpp_nodes/: local_setup.sh  package.sh  package.xml
ros2_prac2_ws/install/cpp_nodes/share/cpp_nodes/cmake/: ament_cmake_export_include_directories-extras.cmake
ros2_prac2_ws/install/interfaces/include/interfaces/msg/: custom_string.hpp  inf_personal_usuario.hpp  posicion.h
ros2_prac2_ws/install/interfaces/include/interfaces/msg/detail/: custom_string__builder.hpp  custom_string__functions.c  custom_string__functions.h  custom_string__rosidl_typesupport_fastrtps_c.h  custom_string__traits.hpp  custom_string__type_support.c  custom_string__type_support.cpp  inf_personal_usuario__functions.c  inf_personal_usuario__rosidl_typesupport_fastrtps_cpp.hpp  inf_personal_usuario__rosidl_typesupport_introspection_cpp.hpp  inf_personal_usuario__struct.h  inf_personal_usuario__type_support.c  inf_personal_usuario__type_support.hpp  posicion__builder.hpp  posicion__functions.c  posicion__functions.h  posicion__rosidl_typesupport_fastrtps_c.h  posicion__rosidl_typesupport_introspection_c.h  posicion__rosidl_typesupport_introspection_cpp.hpp  posicion__struct.h  posicion__struct.hpp  posicion__traits.hpp  posicion__type_support.c  posicion__type_support.cpp
ros2_prac2_ws/install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
ros2_prac2_ws/install/interfaces/share/interfaces/: package.sh
ros2_prac2_ws/install/interfaces/share/interfaces/cmake/: rosidl_cmake-extras.cmake
ros2_prac2_ws/install/interfaces/share/interfaces/msg/: CustomString.idl  Posicion.idl
ros2_prac2_ws/log/: latest_build
ros2_prac2_ws/src/cpp_nodes/: CMakeLists.txt
ros2_prac2_ws/src/cpp_nodes/include/: base_node.hpp  derived_input_node.hpp  derived_node.hpp  empaquetado_nodo.hpp  informacion_personal_nodo.hpp  input_node.hpp
ros2_prac2_ws/src/cpp_nodes/src/: base_node.cpp  derived_input_node.cpp  derived_node.cpp  emocion_usuario_nodo.cpp  empaquetado_nodo.cpp  informacion_personal_nodo.cpp  input_node.cpp  main.cpp  main_2.cpp  posicion_usuario_nodo.cpp
ros2_prac2_ws/src/interfaces/: CMakeLists.txt  package.xml
ros2_prac2_ws/src/interfaces/msg/: InfPersonalUsuario.msg
